# wasm-interpreter

./: .gitignore  Cargo.toml  Makefile  README  grade.sh  grade_pretty.sh  i32.binop.wat  loop.wat  matrix_perf.wat  memtest.wat
src/: main.rs
src/jit/: compiler.rs  mem.rs  mod.rs  utils.rs
src/module/: components.rs  decls.rs  insts.rs  mod.rs  module.rs  parse.rs  value_type.rs  wasm_module.rs  wasmops.rs
src/vm/: exec.rs  func_exec.rs  interpreter.rs  mod.rs
tests/expect/: cmain_double.runs  cmain_int.runs  cmain_union.runs  f64.const0.expect  fib.runs  i32.gt_s0.runs  loop0.runs  memoryops.runs  putd.runs  unreachable.expect
tests/expect_back/: block_brtable.runs  call1.runs  f64.load1.runs  global.set0.runs  global.set1.runs  i32.sub0.runs  local.tee0.runs  mix0.runs  puti.runs  select0.runs
tests/wattests/: br0.wat  br1.wat  br2.wat  br3.wat  br_if2.wat  br_if3.wat  br_table0.wat  br_table2.wat  br_table3.wat  br_table4.wat  call0.wat  call1.wat  call2.wat  call3.wat  call4.wat  call_indirect0.wat  call_indirect2.wat  call_indirect3.wat  cmain_double.wat  cmain_empty.wat  cmain_int.wat  const0.wat  const1.wat  const2_d.wat  f64.add0_d.wat  f64.const0.wat  f64.convert_i32_s0_d.wat  f64.convert_i32_u0_d.wat  f64.div0_d.wat  f64.eq0.wat  f64.ge0.wat  f64.gt0.wat  f64.le0.wat  f64.load1.wat  f64.loadstore.wat  f64.lt0.wat  f64.mul0_d.wat  f64.ne0.wat  f64.store0.wat  f64.sub0_d.wat  (+73 more)
tests/wattests_back/: block_brtable.wat  br_if1.wat  br_table1.wat  br_table3.wat  call_indirect1.wat  const0.wat  f64.ops.wat  i32_const.wat  ifelse0.wat  local.tee0.wat  (+4 more)
(+13 files in other folders)
