[package]
name = "wasm-interpreter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
debug-cell = "0.1.1"
env_logger = "0.11.5"
log = "0.4.22"
wasmparser = "0.216.0"
monoasm = { git = "https://github.com/xyjixyjixyji/monoasm", branch = "master" }
monoasm_macro = { git = "https://github.com/xyjixyjixyji/monoasm", branch = "master" }
libc = "0.2"
